--- a/YourBook/web/View/CSS/HomePage.css
+++ b/YourBook/web/View/CSS/HomePage.css
@@ -2428,29 +2428,29 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #fed136;
-    border-color: #fed136;
+    background-color: #f89c1c;
+    border-color: #f89c1c;
 }
 .btn-primary:hover {
     color: #fff;
-    background-color: #fec810;
-    border-color: #fec503;
+    background-color: #f89c1c;
+    border-color: #f89c1c;
 }
 .btn-primary:focus, .btn-primary.focus {
     color: #fff;
-    background-color: #fec810;
-    border-color: #fec503;
+    background-color: #9cc855;
+    border-color: #9cc855;
     box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #fed136;
-    border-color: #fed136;
+    background-color: #f89c1c;
+    border-color: #f89c1c;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #fec503;
-    border-color: #f3bd01;
+    background-color: #f89c1c;
+    border-color: #f89c1c;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
@@ -9765,7 +9765,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-    color: #fed136 !important;
+    color: #44d3fb !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10038,7 +10038,7 @@ img::-moz-selection {
 #mainNav {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
+    background-color: #f89c1c;
 }
 #mainNav .navbar-toggler {
     padding: 0.75rem;
@@ -10088,7 +10088,7 @@ img::-moz-selection {
     #mainNav.navbar-shrink {
         padding-top: 1rem;
         padding-bottom: 1rem;
-        background-color: #212529;
+        background-color: #f89c1c;
     }
     #mainNav.navbar-shrink .navbar-brand {
         font-size: 1.25em;
@@ -10409,6 +10409,7 @@ header.masthead .masthead-heading {
     border: 0.5rem solid rgba(0, 0, 0, 0.1);
 }
 .team-member h4 {
+    padding-bottom: 20px;
     margin-top: 1.5rem;
     margin-bottom: 0;
 }
